 > Control over location and visibility of skin-provided shortcuts
 > UPnP and video sources explorer, including linking to library limited-by-source
 > More PVR options including playing individual channels
 > When using select dialog, now displays label2's and thumbnails
 > Correct thumbnail/icon usage
 > Addition of skin-required shortcuts which can't be deleted
- Improved labelID generation
- Add option to tell management dialog not to fill label's on management dialog controls, additional label 500 for window title
- Ability to override shortcut actions based on XBMC version
- Skinners can now only override icons, not thumbnails
- Fix for crash when no profiles.xml file
- Fix for single-list xml method to return to main menu item when hiding submenu
- Fix for action sometimes not showing in label2 in management dialog
- Updated language files from Transifex

v0.3.2 - Unreleased development build

v0.3.1
- Fixes: No favourites showing in management dialog
         Script crash on choosing empty group in skin-managed selection dialog
		 Remove visibility condition for Eject Tray shortcut

v0.3.0
- Fix escaping of main menu items (includes method)
- Fix for custom nodes when using profiles
- Fix for includes method when using multiple profiles
- Load skin-provided playlists and playlists from sub-folders
- Ability to browse a plugin from the management dialog
- Ability to provide recommended shortcuts in management dialog
- Ability to choose to play or display a playlist
- Improved method of managing additional properties
- Method to list menu and submenus in a single include
- Ability to allow a user to select a shortcut, then pass this to the skin to manage
- Library/playlists/addon/favourites loading code moved to separate module, loaded threaded
- Menu now be rebuilt on skin or script version and profile changes (includes method)
- Updated language files from Transifex

v0.2.4
- Fix listing individual groups with <include> method